--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure-rest/ai-inference": "^1.0.0-beta.6",
     "@azure/core-auth": "^1.9.0",
+    "@headlessui/react": "^2.2.4",
     "dotenv": "^16.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
