--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DevMGMT",
+  "name": "dev-mgmt",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,7 +14,10 @@
     "@azure-rest/ai-inference": "^1.0.0-beta.6",
     "@azure/core-auth": "^1.9.0",
     "@headlessui/react": "^2.2.4",
+    "axios": "^1.11.0",
     "dotenv": "^16.6.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.2"
