Fetch data from DB completed

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@azure/core-auth": "^1.9.0",
     "@headlessui/react": "^2.2.4",
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
